projects/compiler/test/typechecker/indexing/error_unindexable_type.2.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  s[0]
     ^
Type 'Set<Int>' is not indexable
